add waste cllection route
