# Doc/swagger.yaml
@@ -11,7 +11,7 @@ servers:
     description: Local server
 
 paths:
-  /signup:
+  /SmartWaste/user/signup:
     post:
       summary: User registration
       description: Register a new user
@@ -40,12 +40,26 @@ paths:
                   type: string
                   example: "0789635342"
       responses:
-        201:
+        '201':
           description: User account created
-        400:
+          content:
+            application/json:
+              schema:
+                type: object
+                properties:
+                  message:
+                    type: string
+                    example: "User account created!"
+                  user:
+                    $ref: '#/components/schemas/User'
+        '400':
           description: Bad Request
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/Error'
 
-  /signin:
+  /SmartWaste/user/signin:
     post:
       summary: User login
       description: Login a user
@@ -65,7 +79,242 @@ paths:
                   type: string
                   example: "1234567"
       responses:
-        200:
+        '200':
           description: User account verified
-        400:
+          content:
+            application/json:
+              schema:
+                type: object
+                properties:
+                  message:
+                    type: string
+                    example: "User account verified!"
+                  user:
+                    $ref: '#/components/schemas/User'
+                  token:
+                    type: string
+                    example: "jwt_token_here"
+        '400':
           description: Bad Request
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/Error'
+
+  /SmartWaste/user/listAll:
+    get:
+      summary: Get all users
+      description: Retrieve a list of all users
+      tags:
+        - Users
+      responses:
+        '200':
+          description: Successfully retrieved list of users
+          content:
+            application/json:
+              schema:
+                type: array
+                items:
+                  $ref: '#/components/schemas/User'
+        '500':
+          description: Server error
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/Error'
+
+  /SmartWaste/user/updateUserProfile/{id}:
+    patch:
+      summary: Update user by ID
+      description: Update a user profile by ID
+      tags:
+        - Users
+      parameters:
+        - name: id
+          in: path
+          required: true
+          description: ID of the user to be updated
+          schema:
+            type: string
+      responses:
+        '200':
+          description: Successfully updated user profile
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/User'
+        '404':
+          description: User not found
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/Error'
+        '401':
+          description: Unauthorized
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/Error'
+
+  /SmartWaste/user/findUserProfile/{id}:
+    get:
+      summary: Find user by ID
+      description: Retrieve a user profile by ID
+      tags:
+        - Users
+      parameters:
+        - name: id
+          in: path
+          required: true
+          description: ID of the user to be found
+          schema:
+            type: string
+      responses:
+        '200':
+          description: Successfully retrieved user profile
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/User'
+        '404':
+          description: User not found
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/Error'
+        '401':
+          description: Unauthorized
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/Error'
+
+  /SmartWaste/user/deleteUser/{id}:
+    delete:
+      summary: Delete user by ID
+      description: Delete a user profile by ID
+      tags:
+        - Users
+      parameters:
+        - name: id
+          in: path
+          required: true
+          description: ID of the user to be deleted
+          schema:
+            type: string
+      responses:
+        '200':
+          description: User deleted successfully
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/User'
+        '404':
+          description: User not found
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/Error'
+        '401':
+          description: Unauthorized
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/Error'
+
+  /smartWaste/route/addRoute:
+    post:
+      summary: Add a new waste collection route
+      description: Create a new waste collection route with specified details.
+      tags:
+        - Routes
+      requestBody:
+        required: true
+        content:
+          application/json:
+            schema:
+              $ref: '#/components/schemas/Route'
+      responses:
+        '201':
+          description: Route created successfully
+        '400':
+          description: Bad Request (Invalid input)
+        '500':
+          description: Server error (Unable to create route)
+
+  /smartWaste/route/allRoute:
+    get:
+      summary: Get all waste collection routes
+      description: Fetch all available waste collection routes.
+      tags:
+        - Routes
+      responses:
+        '200':
+          description: List of all waste collection routes
+          content:
+            application/json:
+              schema:
+                type: array
+                items:
+                  $ref: '#/components/schemas/RouteResponse'
+        '401':
+          description: Unauthorized (Token is missing or invalid)
+        '500':
+          description: Server error (Unable to fetch routes)
+
+components:
+  schemas:
+    User:
+      type: object
+      properties:
+        name:
+          type: string
+          example: "Fab"
+        email:
+          type: string
+          example: "fab@gmail.com"
+        address:
+          type: string
+          example: "kigali, nyarugenge"
+        phone_number:
+          type: string
+          example: "0789635342"
+        user_type:
+          type: string
+          example: "Resident"
+
+    Error:
+      type: object
+      properties:
+        message:
+          type: string
+          example: "Error message here"
+
+    Route:
+      type: object
+      properties:
+        route_name:
+          type: string
+          example: "kiyovu"
+        area_covered:
+          type: string
+          example: "Nyarugenge sector"
+        collection_days:
+          type: string
+          example: "Monday, Thursday"
+        vehicle_id:
+          type: string
+          example: "abc123"
+        status:
+          type: string
+          enum:
+            - Active
+            - Inactive
+          example: "Active"
+
+    RouteError:
+      type: object
+      properties:
+        message:
+          type: string
+          example: "Error message here"
