# Route/userRoute.js
@@ -1,5 +1,5 @@
 
-import {SignIn,SignUp,ResetPassword,ForgotPassword,Logout,test, getAllusers,getUserProfile,updateUserProfile} from '../controller/userController.js';
+import {SignIn,SignUp,ResetPassword,ForgotPassword,Logout,test, getAllusers,getUserProfile,updateUserProfile,deleteUser} from '../controller/userController.js';
 import express from 'express';
 import { signUpValidator,signInValidator,resetPasswordValidation,forgotpasswordValidation, } from '../Utils/validation.js';
 import{authenticateToken} from "../Middleware/authethicateToken.js";
@@ -10,6 +10,7 @@ route.post('/signin',signInValidator,SignIn)
 route.get('/listAll',authenticateToken,getAllusers)
 route.get('/findUserProfile/:id',authenticateToken,getUserProfile)
 route.patch('/updateUserProfile/:id',authenticateToken,updateUserProfile)
+route.delete('/deleteUser/:id',authenticateToken,deleteUser)
 route.post('/resetpassword',resetPasswordValidation,ResetPassword)
 route.post('/forgotpassword',forgotpasswordValidation,ForgotPassword)
 // route.post('/verify',otpValidation,Validateopt)
